<resources>
    <string name="app_name">Projet_Cantal_Hernandez</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="accueil">Accueil</string>
    <string name="recherche">Recherche</string>
    <string name="moncompte">Mon Compte</string>
    <string name="mesbillets">Mes Billets</string>
    <string name="ecoute">Ecoute</string>
    <string name="connexion">Connexion</string>
    <string name="nom_chanteur">Nom Chanteur</string>
    <string name="album">Album</string>
    <string name="image_album">Image Album</string>
    <string name="text_empty">Texte Empty</string>

</resources>
